commiting together some new cool things and fixes:
- added tracer (by using stalker api) accessible by right clicking on a thread item in the threads panel
- added debug symbols on top of right click menu for memory address widgets
- fix when unplugging device with another device selected
- fix tree style

--- a/ui/style.qss
+++ b/ui/style.qss
@@ -274,3 +274,10 @@ QToolTip {
     padding: 0;   /*remove padding, for fix combo box tooltip*/
     opacity: 230; /*#BA0000ucing transparency to read better*/
 }
+
+QTreeView:branch:selected,
+QTreeView:branch:selected:focus,
+QTreeView:branch:selected:hover,
+QTreeView:branch:hover {
+    background-color: #090909;
+}
