--- a/assets/black_style.qss
+++ b/assets/black_style.qss
@@ -347,7 +347,8 @@ QCheckBox:disabled {
 }
 
 QCheckBox::indicator,
-QGroupBox::indicator {
+QGroupBox::indicator,
+QTreeView::indicator {
     width: 13px;
     height: 13px;
     background: #080808;
@@ -355,7 +356,9 @@ QGroupBox::indicator {
     border-radius: 2px;
 }
 
-QCheckBox::indicator:checked {
+QCheckBox::indicator:checked,
+QGroupBox::indicator:checked,
+QTreeView::indicator:checked {
     image: url(assets/icons/x.svg)
 }
 
@@ -380,17 +383,4 @@ QProgressBar {
 
 QProgressBar::chunk:horizontal {
     background: qlineargradient(x1: 0, y1: 0.5, x2: 1, y2: 0.5, stop: 0 #080808, stop: 0.5 #ef5350, stop: 1 #080808);
-}
-
-QDockWidget {
-   background: black;
-}
-
-QDockWidget::title {
-   background-color: transparent;
-   font-size: 110%;
-   font-weight: bold;
-   padding: 5px 0;
-   margin-left: 10px;
-   text-transform: uppercase;
 }
