--- a/assets/dark_style.qss
+++ b/assets/dark_style.qss
@@ -351,7 +351,8 @@ QCheckBox:disabled {
 }
 
 QCheckBox::indicator,
-QGroupBox::indicator {
+QGroupBox::indicator,
+QTreeView::indicator {
     width: 13px;
     height: 13px;
     background: #181818;
@@ -359,7 +360,9 @@ QGroupBox::indicator {
     border-radius: 2px;
 }
 
-QCheckBox::indicator:checked {
+QCheckBox::indicator:checked,
+QGroupBox::indicator:checked,
+QTreeView::indicator:checked  {
     image: url(assets/icons/x.svg)
 }
 
