--- a/assets/dark_style.qss
+++ b/assets/dark_style.qss
@@ -221,6 +221,8 @@ QTextEdit, QPlainTextEdit, QLineEdit {
 }
 
 /* Tabs */
+QTabWidget::tab-bar { alignment: left; }
+
 QTabBar::tab {
     alignment: left;
     background-color: #212121;
