--- a/assets/light_style.qss
+++ b/assets/light_style.qss
@@ -212,6 +212,8 @@ QTextEdit, QPlainTextEdit, QLineEdit {
 }
 
 /* Tabs */
+QTabWidget::tab-bar { alignment: left; }
+
 QTabBar::tab {
     alignment: left;
     background-color: #f9f9f9;
