--- a/assets/black_style.qss
+++ b/assets/black_style.qss
@@ -218,6 +218,8 @@ QTextEdit, QPlainTextEdit, QLineEdit {
 }
 
 /* Tabs */
+QTabWidget::tab-bar { alignment: left; }
+
 QTabBar::tab {
     alignment: left;
     background-color: #111;
