--- a/assets/dark_style.qss
+++ b/assets/dark_style.qss
@@ -30,7 +30,6 @@ QListView, QTableView, QTreeView, QTabWidget::pane {
     border: 1px solid #333;
 }
 
-
 QListView::item,
 QTableView::item,
 QTreeView::item {
@@ -234,7 +233,7 @@ QTabBar::tab {
     padding: 5px 10px;
 }
 
-    QTabBar::tab:last {
+    QTabBar::tab:last, QTabBar::tab:only-one  {
         border-right: 1px solid #333;
     }
 
@@ -302,6 +301,7 @@ QHeaderView::section:last, QHeaderView::section:only-one {
 
 QTabWidget QFrame{
     border: 0;
+    background: #181818;
 }
 
 QTabWidget::pane {
@@ -309,12 +309,6 @@ QTabWidget::pane {
     padding: 0px;
     margin: 0px;
 }
-
-/*
-QTabWidget::pane:selected {
-    background-color: transparent;
-    border: 0px solid transparent;
-}*/
 
 QTabBar:close-button {
     image: url(assets/close_btn.png);
@@ -395,4 +389,12 @@ QProgressBar {
 
 QProgressBar::chunk:horizontal {
     background: qlineargradient(x1: 0, y1: 0.5, x2: 1, y2: 0.5, stop: 0 #181818, stop: 0.5 #ef5350, stop: 1 #181818);
+}
+
+QDockWidget::title {
+   font-size: 110%;
+   font-weight: bold;
+   padding: 5px 0;
+   margin-left: 10px;
+   text-transform: uppercase;
 }
