--- a/assets/dark_style.qss
+++ b/assets/dark_style.qss
@@ -392,6 +392,7 @@ QProgressBar::chunk:horizontal {
 }
 
 QDockWidget::title {
+   background-color: transparent;
    font-size: 110%;
    font-weight: bold;
    padding: 5px 0;
