--- a/assets/light_style.qss
+++ b/assets/light_style.qss
@@ -383,10 +383,60 @@ QProgressBar::chunk:horizontal {
     background: qlineargradient(x1: 0, y1: 0.5, x2: 1, y2: 0.5, stop: 0 #fff, stop: 0.5 #ef5350, stop: 1 #fff);
 }
 
+
+QDockWidget {
+    titlebar-close-icon: url('assets/icons/x.svg');
+    titlebar-normal-icon: url('assets/icons/undock.svg');
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 QDockWidget::title {
-   font-size: 110%;
-   font-weight: bold;
-   padding: 5px 0;
-   margin-left: 10px;
-   text-transform: uppercase;
+    padding: 3px 0;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    border-bottom: none;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    background-color: rgba(0,0,0,.1);
+}
+
+QDockWidget::close-button {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    top: 5px;
+    right: 5px;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+}
+
+QDockWidget::close-button:hover {
+    border: 1px solid #aaa;
+    background-color: rgba(255,255,255,.1);
+}
+
+QDockWidget::close-button:pressed {
+    border: 1px solid #aaa;
+    background-color: rgba(0,0,0,.1);
+}
+
+QDockWidget::float-button {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    top: 5px;
+    right: 26px;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+}
+
+QDockWidget::float-button:hover {
+    border: 1px solid #aaa;
+    background-color: rgba(255,255,255,.1);
+}
+
+QDockWidget::float-button:pressed {
+    border: 1px solid #aaa;
+    background-color: rgba(0,0,0,.1);
 }
