--- a/assets/dark_style.qss
+++ b/assets/dark_style.qss
@@ -365,8 +365,8 @@ QCheckBox:disabled {
 QCheckBox::indicator,
 QGroupBox::indicator,
 QTreeView::indicator {
-    width: 13px;
-    height: 13px;
+    width: 14px;
+    height: 14px;
     background: #181818;
     border: 1px solid #333;
     border-radius: 2px;
@@ -375,7 +375,7 @@ QTreeView::indicator {
 QCheckBox::indicator:checked,
 QGroupBox::indicator:checked,
 QTreeView::indicator:checked  {
-    image: url(assets/icons/x.svg)
+    image: url(assets/icons/check.svg);
 }
 
 QGroupBox::indicator {
