--- a/assets/light_style.qss
+++ b/assets/light_style.qss
@@ -363,8 +363,8 @@ QCheckBox:disabled {
 QCheckBox::indicator,
 QGroupBox::indicator,
 QTreeView::indicator {
-    width: 13px;
-    height: 13px;
+    width: 14px;
+    height: 14px;
     background: #fff;
     border: 1px solid #ccc;
     border-radius: 2px;
@@ -373,7 +373,7 @@ QTreeView::indicator {
 QCheckBox::indicator:checked,
 QGroupBox::indicator:checked,
 QTreeView::indicator:checked {
-    image: url(assets/icons/x.svg)
+    image: url(assets/icons/check.svg)
 }
 
 QGroupBox::indicator {
