ui stuff, ELF Infos, fixes

--- a/assets/black_style.qss
+++ b/assets/black_style.qss
@@ -169,13 +169,18 @@ QPushButton {
     }
 
 /* Splitter */
+QSplitter::handle {
+    padding: 1px;
+}
 QSplitter::handle:horizontal {
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #111, stop:.5 #222, stop:1 #111);
-    width: 5px;
+    width: 1px;
+    background-color: #111;
+    image: url(assets/icons/divider_h.svg);
 }
 
 QSplitter::handle:vertical {
-    background: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop:0 #111, stop:.5 #222, stop:1 #111);
+    height: 1px;
+    background-color: #111;
 }
 
 /* Scrollbar */
@@ -472,3 +477,20 @@ QDockWidget::float-button:pressed {
 }
 
 QComboBox::drop-down { border: none; }
+
+QTreeView::branch:has-children:!has-siblings:closed,
+QTreeView::branch:closed:has-children:has-siblings {
+        border-image: none;
+        image: url(assets/branch_closed.svg);
+}
+
+QTreeView::branch:open:has-children:!has-siblings,
+QTreeView::branch:open:has-children:has-siblings  {
+        border-image: none;
+        image: url(assets/branch_open.svg);
+}
+
+QLabel, QLabel > * {
+    background: transparent;
+    background-color: none;
+}
