--- a/assets/black_style.qss
+++ b/assets/black_style.qss
@@ -47,7 +47,8 @@ QListView, QTableView, QTreeView, QTabWidget::pane {
 }
 QListView::item,
 QTableView::item,
-QTreeView::item {
+QTreeView::item,
+QTreeView::branch {
     border: 0;
     padding: 3px 5px;
     background: #080808;
@@ -68,8 +69,8 @@ QTreeView::item:hover {
 
 QListView::item::selected
 QTableView::item::selected,
-QTreeView::item:selected 
- {
+QTreeView::item:selected
+{
     background-color: #333;
     color: #ef5350; /* taken from logo */
 }
@@ -436,13 +437,13 @@ QDockWidget::title {
 QDockWidget::close-button {
     border:none;
     background: transparent;
-    icon-size: 14px;
+    icon-size: 9px;
     subcontrol-position: center right;
     subcontrol-origin: margin;
     position: absolute;
-    top: 0px; left: 0px; right: 3px; bottom: 0px;
-    width: 18px;
-    height: 18px;
+    top: 0px; left: 0px; right: 8px; bottom: 0px;
+    width: 10px;
+    height: 10px;
 }
 
 QDockWidget::close-button:hover {
@@ -458,13 +459,13 @@ QDockWidget::close-button:pressed {
 QDockWidget::float-button {
     border:none;
     background: transparent;
-    icon-size: 14px;
+    icon-size: 10px;
     subcontrol-position: center right;
     subcontrol-origin: margin;
     position: absolute;
-    top: 0px; left: 0px; right: 20px; bottom: 0px;
-    width: 18px;
-    height: 18px;
+    top: 0px; left: 0px; right: 25px; bottom: 0px;
+    width: 10px;
+    height: 10px;
 }
 
 QDockWidget::float-button:hover {
